# pthkd

./: Cargo.toml  build.rs  build.sh  bundle.sh  config.toml  config.toml.backup  prompt.txt
examples/: midir.rs
proto/: PTSL.proto
scripts/: com.feralfrequencies.pthkd.plist  create_bundle.sh
src/: actions.rs  async_runtime.rs  config.rs  hotkey.rs  keycodes.rs  main.rs  menu_item.rs  params.rs  prelude.rs  swift_bridge.rs
src/config/: default_config.toml  mod.rs  params.rs
src/input/: hotkey.rs  keycodes.rs  midi.rs  mod.rs
src/macos/: actions.rs  app.rs  app_info.rs  carbon_hotkeys.rs  commands.rs  events.rs  ffi.rs  helpers.rs  input.rs  input_dialog.rs  keyring.rs  keystroke.rs  keystroke_new.rs  menu.rs  menu_bar.rs  menu_cache.rs  menu_new.rs  menubar.rs  mod.rs  notifications.rs  permissions.rs  session.rs  swift_bridge.rs  ui.rs  ui_elements.rs  window.rs
src/protools/: actions.rs  client.rs  commands.rs  edit.rs  markers.rs  mod.rs  plugins.rs  session.rs  timecode.rs  tracks.rs
src/soundminer/: actions.rs  commands.rs  mod.rs
swift/: Package.swift  setup-swift.sh
swift/Sources/PTHKDui/: AppOps.swift  DirectMenuExecution.swift  Keystroke.swift  MenuItem.swift  MenuOps.swift  PTHKDui.swift  WindowOps.swift
