[package]
name = "protools_hotkey_daemon"
version = "0.1.9"
edition = "2024"

[[bin]]
name = "pthkd"
path = "src/main.rs"

[dependencies]
libc = "0.2"
mac-notification-sys = "0.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
prost = "0.14.1"
serde_json = "1.0"
anyhow = "1.0.100"
tonic = "0.14.2"
tonic-prost = "0.14.2"
log = "0.4"
env_logger = "0.11"
objc2 = "0.5"
objc2-foundation = "0.2"
lazy_static = "1.5.0"
paste = "1.0"
security-framework = "2.11"
midir = "0.10"

[build-dependencies]
tonic-prost-build = "0.14.2"  

[package.metadata.bundle]
  name = "pt-cli"
  identifier = "com.feralfrequencies.pt-cli"
  category = "Utility"
  osx_background_only = true

